--- a/app/src/main/res/layout/item_taskgroup.xml
+++ b/app/src/main/res/layout/item_taskgroup.xml
@@ -6,7 +6,6 @@
 
     <TextView
         android:id="@+id/group_title"
-        android:layout_width="149dp"
-        android:layout_height="wrap_content"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
