--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -14,6 +14,7 @@
         android:layout_height="463dp"
         android:layout_marginTop="4dp"
         android:choiceMode="multipleChoice"
+        android:longClickable="true"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
