--- a/app/src/main/res/layout/item_tasks.xml
+++ b/app/src/main/res/layout/item_tasks.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:button="@null"
+        android:longClickable="true"
         android:drawableRight="?android:attr/listChoiceIndicatorMultiple" />
 
 
